fix: unnecessary spacing removed

--- a/Udemy-Exercises/NextJs-projects/sos-beauty/pages/dalyFacialTreatments/index.module.css
+++ b/Udemy-Exercises/NextJs-projects/sos-beauty/pages/dalyFacialTreatments/index.module.css
@@ -37,8 +37,9 @@
     border-radius: 20px 145px / 135px;
     box-shadow: 0 0 0 1px #db8183, 5px 5px 3px var(--color-black-transparent);
     font-size: 14px;
-    padding: 3px 4px 0 4px;
+    padding: 3px 5px 0 5px;
     display: inline-block;
+    text-indent: 0px;
 }
 
 .discount {
